--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- Menu overlay -->
-    <div class="overlay">
+    <div class="overlay overlay-slide-left">
       <!-- Menu Items -->
       <nav>
         <ul>
@@ -20,6 +20,12 @@
           <li id="nav-5"><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+    </div>
+    <!-- Menu bars -->
+    <div class="menu-bars">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
     </div>
 
     <!-- Sections -->
